--- a/NEWS
+++ b/NEWS
@@ -1019,3 +1019,6 @@ version 1.3.19: (2018-10-18)
 
 version 1.3.20: (2018-10-18)
 - Minor updates to README and vignette (e.g. to include BASiCS sticker)
+
+version 1.3.21: (2018-10-19)
+- Restores use of `R::lgammafn` due to errors in Bioconductor build report
