--- a/NEWS
+++ b/NEWS
@@ -1022,3 +1022,7 @@ version 1.3.20: (2018-10-18)
 
 version 1.3.21: (2018-10-19)
 - Restores use of `R::lgammafn` due to errors in Bioconductor build report
+
+version 1.3.22: (2018-10-19)
+- Update of DESCRIPTION to require C++11
+- Once again, replacement of `R::lgammafn` by `std::lgamma` in c++ code 
