--- a/NEWS
+++ b/NEWS
@@ -1029,3 +1029,6 @@ version 1.3.22: (2018-10-19)
 
 version 1.3.23: (2018-10-18)
 - Updated vignette to include simple SCE example without spike-in information
+
+version 1.3.24: (2018-10-21)
+- Version bump to trigger new build
