--- a/NEWS
+++ b/NEWS
@@ -1032,3 +1032,6 @@ version 1.3.23: (2018-10-18)
 
 version 1.3.24: (2018-10-21)
 - Version bump to trigger new build
+
+version 1.5.1: (2018-11-29)
+- `ImmunoOncology` added in biocViews as requested by BioC core team
