--- a/NEWS
+++ b/NEWS
@@ -1035,3 +1035,7 @@ version 1.3.24: (2018-10-21)
 
 version 1.5.1: (2018-11-29)
 - `ImmunoOncology` added in biocViews as requested by BioC core team
+
+version 1.5.2: (2018-12-01)
+- Fixes use of `BatchInfo` when it cannot be parsed to numeric
+- Refactors the use of `...` argument (several functions)
