--- a/NEWS
+++ b/NEWS
@@ -1039,3 +1039,7 @@ version 1.5.1: (2018-11-29)
 version 1.5.2: (2018-12-01)
 - Fixes use of `BatchInfo` when it cannot be parsed to numeric
 - Refactors the use of `...` argument (several functions)
+
+version 1.5.3: (2018-12-06)
+- Removes `...` argument from `BASiCS_VarianceDecomp`
+- Adds missing argument (`beside`) to documentation of `BASiCS_VarianceDecomp`
