--- a/vignettes/BASiCS.Rmd
+++ b/vignettes/BASiCS.Rmd
@@ -117,6 +117,11 @@ For other optional parameters refer to `help(BASiCS_MCMC)`.
 Here, we illustrate the usage of `BASiCS_MCMC` using a built-in 
 synthetic dataset.
 
+**NOTE: WE USE A SMALL NUMBER OF ITERATIONS FOR ILLUSTRATION PURPOSES ONLY.
+LARGER NUMBER OF ITERATIONS ARE USUALLY REQUIRED TO ACHIEVE CONVERGENCE. OUR
+RECOMMENDED SETTING IS `N=20000`, `Thin=20` and `Burn=10000`.**
+
+
 ```{r quick-start-MCMC}
 Data <- makeExampleBASiCS_Data()
 Chain <- BASiCS_MCMC(Data = Data, N = 1000, Thin = 10, Burn = 500, 
