--- a/NEWS
+++ b/NEWS
@@ -1060,3 +1060,6 @@ version 1.5.6: (2019-03-20) - merge from RELEASE_3_8 branch
 - Added line breaks after individual error messages 
 - Bug fix that corrects for the number of factors in BatchInfo vector
 - Small bug fix in 'test_mcmc_arguments.R'
+
+version 1.5.7: (2019-03-22)
+- Added default value for 'BatchInfo' within 'BASiCS_MCMC'
