--- a/vignettes/BASiCS.Rmd
+++ b/vignettes/BASiCS.Rmd
@@ -26,8 +26,9 @@ knitr::opts_chunk$set(dev="png")
 ```
 
 ```{r library, echo=FALSE}
-library(BASiCS)
-library(BiocStyle)
+library("BASiCS")
+library("BiocStyle")
+library("SingleCellExperiment")
 ```
 
 # Introduction 
