--- a/NEWS
+++ b/NEWS
@@ -1162,3 +1162,7 @@ from the EFDR calibration. This alters some of the related 'Hidden' functions.
 - In `BASiCS_TestDE`, default values for `EFDR_M`, `EFDR_D` and `EFDR_R` 
 were changed to 0.05. 
 - Unit tests updated accordingly
+
+version 1.5.28 (2019-04-09)
+- Edited version of `BASiCS_Sim` to allow no spikes - WIP 
+- TO-DO: fix issue when no spikes + no batch
