--- a/vignettes/BASiCS.Rmd
+++ b/vignettes/BASiCS.Rmd
@@ -240,6 +240,22 @@ slot via the `isSpike` function.
 Once the additional information is included, 
 the object can be used within BASiCS.
 
+NOTE: Input number of molecules for spike-in should be calculated using 
+experimental information. For each spike-in gene $i$, we use \vspace{-0.2cm} 
+
+$$ \mu_{i} = C_i \times 10^{-18} \times (6.022 \times 10^{23}) 
+\times V \times D \hspace{0.5cm} \mbox{where,} $$
+
+- $C_i$ is the concentration of the spike $i$ in the ERCC mix (see 
+[here](https://assets.thermofisher.com/TFS-Assets/LSG/manuals/cms_095046.txt))
+- $10^{-18}$ is to convert att to mol
+- $6.022 \times 10^{23}$ is the Avogadro number (mol $\rightarrow$ molecule)
+- $V$ is the volume added into each chamber (in nL)
+- $D$ is a dilution factor
+
+For example, for the 96-well plate in the Fluidigm C1 system, 
+$V = 6.7 \times 10^{-3}$ (see [here](https://www.fluidigm.com/faq/ifc-9)). 
+
 ### Without spike-in genes
 
 To run BASiCS without incorporating reads from technical spike-in genes, 
