--- a/NEWS
+++ b/NEWS
@@ -1178,3 +1178,11 @@ lowly expressed genes that are excluded from the mean/over-dispersion trend.
 
 version 1.5.31 (2019-04-15)
 - Updated vignette to include ERCC calculation
+
+version 1.5.32 (2019-04-17)
+- Minor change in `BASiCS_MCMC` to avoid storing adaptive variances in the
+`BASiCS_Chain` object when `StoreAdapt = TRUE`. 
+- New unit test to ensure the correct output in `BASiCS_Chain@parameters`
+- Minor change in `Summary` method for `BASiCS_Chain` class to avoid calculating 
+posterior summaries when `designMatrix` is part of the `parameters` slot
+- Added `return` to the docummentation of `BASiCS_effectiveSize`. 
