--- a/NEWS
+++ b/NEWS
@@ -1189,3 +1189,6 @@ posterior summaries when `designMatrix` is part of the `parameters` slot
 
 version 1.5.33 (2019-04-19)
 - Updated ERCC formula in the vignette.
+
+version 1.5.34 (2019-04-20)
+- Fixes typo in vignette
