--- a/NEWS
+++ b/NEWS
@@ -1195,3 +1195,9 @@ version 1.5.34 (2019-04-20)
 
 version 1.7.1 (2019-07-27)
 - `is_true` deprecated in `testthat`. Unit tests updated to use `expect_true`
+
+version 1.7.2 (2019-07-28)
+- Specific minimum tolerance thresholds (e.g. 1e-3 for mu updates) replaced by
+global parameters (e.g. `mintol_mu`). Optional parameters; internal use only. 
+Incorporated within `HiddenBASiCS_MCMC_ExtraArgs`. 
+- General clean up to remove code redundancy in `BASiCS_MCMC` (WIP)
