--- a/NEWS
+++ b/NEWS
@@ -1205,3 +1205,9 @@ Incorporated within `HiddenBASiCS_MCMC_ExtraArgs`.
 
 version 1.7.3 (2019-07-29)
 - Minor typo fixed in `BASiCS_MCMC`. 
+
+version 1.7.4 (2019-07-29)
+- `HiddenBASiCS_MCMCcppReg` and `HiddenBASiCS_MCMCcppRegNoSpikes` (C++ code)
+modified to update design matrix throughout MCMC (GRBF locations remain fixed
+after the burn-in period is over)
+- Unit tests updated accordingly. 
