--- a/vignettes/BASiCS.Rmd
+++ b/vignettes/BASiCS.Rmd
@@ -352,7 +352,7 @@ Test <- BASiCS_TestDE(Chain1 = ChainSC, Chain2 = ChainRNA,
                       GroupLabel1 = "SC", GroupLabel2 = "PaS",
                       EpsilonM = log2(1.5), EpsilonD = log2(1.5),
                       EFDR_M = 0.10, EFDR_D = 0.10,
-                      Offset = TRUE, PlotOffset = FALSE, Plot = TRUE)
+                      Offset = TRUE, PlotOffset = TRUE, Plot = TRUE)
 ```
 
 In `BASiCS_TestDE`, `EpsilonM` sets the log2 fold change (log2FC) in expression 
