--- a/vignettes/BASiCS.Rmd
+++ b/vignettes/BASiCS.Rmd
@@ -226,13 +226,11 @@ DataExample <- newBASiCS_Data(Counts, Tech, SpikeInfo,
 To convert an existing `SingleCellExperiment` object (`Data`) into one that can 
 be used within BASiCS, meta-information must be stored in the object.
 
-* `isSpike(Data, "ERCC") <- Tech`: the logical vector indicating 
-biological/technical genes (see above) must be stored in the `int_metadata` 
-slot via the `isSpike` function.
+* If spike-ins are in use, observed counts must be stored in `altExp(Data)` 
 
 * `metadata(Data)`: the `SpikeInfo` object is stored in the 
 `metadata` slot of the `SingleCellExperiment` object: 
-`metadata(Data) <- list(SpikeInput = SpikeInfo[,2], BatchInfo = BatchInfo)`. 
+`metadata(Data) <- list(SpikeInput = SpikeInfo)`. 
 
 * `colData(Data)$BatchInfo`: the `BatchInfo` object is stored in the 
 `colData` slot of the `SingleCellExperiment` object.
