--- a/NEWS
+++ b/NEWS
@@ -1261,3 +1261,9 @@ version 1.7.13 (2019-09-25)
 - Updated unit tests to account for new default choice for `min.mean` parameter
 in `scran::computeSumFactors`
 - New unit test to check for changes in `scran::computeSumFactors`
+
+version 1.7.14 (2019-09-27)
+- Changed internal functions from `matrixStats` to `Matrix` to support more 
+  classes of matrix (eg, `dgCMatrix`).
+  BASiCS_MCMC now supports DelayedArray, dgEMatrix, dgCMatrix objects and likely
+  more.
