--- a/NEWS
+++ b/NEWS
@@ -1267,3 +1267,7 @@ version 1.7.14 (2019-09-27)
   classes of matrix (eg, `dgCMatrix`).
   BASiCS_MCMC now supports DelayedArray, dgEMatrix, dgCMatrix objects and likely
   more.
+  
+version 1.7.15 (2019-09-30)
+- Swtich from `matrixStats` dependency to `Matrix` as it supports more general input classes (including sparse matrices)
+- `newBASiCS_Data` now requires input counts to be a `matrix`. 
