Refactor TestDE for S4 objects rather than lists, use ggplot2.
The objects are nested, with the outer layer "BASiCS_ResultsDE"
being basically a wrapper for "BASiCS_ResultDE", which hold
the result for each test. This can be further improved by
adding some helper functions for the outer and inner classes.

It's questionable how much of the objects need to be stored.
Some of it could be calculated on the fly, to reduce the
complexity of the classes. Also, adding functionality
to annotate genes with rowData/metadata would be
very nice. Subset functions (to remove/retain genes)
would also be very nice but have not yet been added.

This is a massively breaking change. Could consider adding
functions to convert from old to new and new to old
temporarily.

--- a/vignettes/BASiCS.Rmd
+++ b/vignettes/BASiCS.Rmd
@@ -363,8 +363,8 @@ This is the recommended default setting.
 The resulting output list can be displayed using
 
 ```{r quick-start-DE}
-head(Test$TableMean)
-head(Test$TableDisp)
+head(Test@Results[["Mean"]]@Table)
+head(Test@Results[["Disp"]]@Table)
 ```
 
 Due to the confounding between mean and over-dispersion that is 
@@ -482,7 +482,7 @@ all genes can be tested for changes in expression variability independent of
 changes in mean expression.
 
 ```{r}
-head(Test$TableResDisp, n = 2)
+head(Test@Results[["ResDisp"]]@Table, n = 2)
 ```
 
 **Note:** Additional parameters for this sampler include: `k` number of 
