--- a/NEWS
+++ b/NEWS
@@ -1302,3 +1302,6 @@ version 1.7.19 (2019-10-08)
 - BASiCS_TestDE now checks to ensure that both input chains have been run with
   Regression = FALSE or both with Regression = TRUE.
 - Remove duplicated text from `BASiCS_Chain`'s show method.
+
+version 1.7.20 (2019-10-17)
+- Bumps version number to trigger new build.
