--- a/NEWS
+++ b/NEWS
@@ -1329,3 +1329,6 @@ version 1.9.5 (2019-12-04)
 - Optional parameter added to all mcmc samplers to enable user-defined 
 prior mean for log(mu).
 - Requirement of R (>= 4.0.0) added as suggested by BiocCheck
+
+version 1.9.6 (2019-12-04)
+- Minor changes in `test_misc.R` to expose hidden functions
