--- a/NEWS
+++ b/NEWS
@@ -1332,3 +1332,7 @@ prior mean for log(mu).
 
 version 1.9.6 (2019-12-04)
 - Minor changes in `test_misc.R` to expose hidden functions
+
+version 1.9.7 (2019-12-05)
+- Fixes bug in mu updates (log(mu) - mu.mu, rather than log(mu - mu.mu)). This
+does not affect default prior, only empirical Bayes approach.
