--- a/NEWS
+++ b/NEWS
@@ -1336,3 +1336,11 @@ version 1.9.6 (2019-12-04)
 version 1.9.7 (2019-12-05)
 - Fixes bug in mu updates (log(mu) - mu.mu, rather than log(mu - mu.mu)). This
 does not affect default prior, only empirical Bayes approach.
+
+version 1.9.8 (2019-12-12)
+- Clean-up for `HiddenTailProbTestDE` -> renamed as `.TailProb`. Similar for
+`.ThresholdSearch`, `.EFDR` and `.EFNR`
+- Extra unit test for `GenesSelect` parameter in `BASiCS_TestDE`
+- Removes `HiddenThresholdSearchDetectHVG_LVG` as no longer needed.
+- Changes in `BASiCS_DetectHVG` and `BASiCS_DetectLVG` to reuse same hidden
+functions as in `BASiCS_TestDE` (extra potential changes exist)
