--- a/NEWS
+++ b/NEWS
@@ -1355,7 +1355,7 @@ version 1.9.10 (2019-12-13)
 - Further clean up in `BASiCS_TestDE`. Creates new internal functions to avoid
 duplicated code across different tests: `.TestResults`, `.ShowTestResults`
 
-WIP
+version 1.9.10.1 (2020-01-10)
 - Implementation of empirical Bayes (EB) approach for `mu` in `BASiCS_MCMC`
 - Additional parameter `PriorMu` incorporated to `BASiCS_MCMC`. This enables
 internal calculation of the EB prior. 
@@ -1363,5 +1363,7 @@ internal calculation of the EB prior.
 - `HiddenBASiCS_MCMC_InputCheck`, `HiddenBASiCS_MCMC_GlobalParams` and
 `HiddenBASiCS_MCMC_ExtraArgs` renamed as `.BASiCS_MCMC_InputCheck`, 
 `.BASiCS_MCMC_GlobalParams` and `.BASiCS_MCMC_ExtraArgs`.
-
 - Fixes minor bug in `.EmpiricalBayesMu`
+- Fixes EB approach for no-spikes case (regression and no regression)
+- Updates documentation of `BASiCS_MCMC` to include `PriorMu` as a parameter
+- Removes dependency to `scater` functions in `.EmpiricalBayesMu`.
